--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mobx-react": "^6.0.4",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
+    "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "tinycolor2": "^1.4.1"
